# daraja-mock

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
daraja_mock/: __init__.py  __main__.py  server.py
tests/: test_mock.py
